# kursovaya_django

./: .env.sample  README.md  groups.json  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options_alter_mailingattempt_options_and_more.py
mailing/templates/: index.html
mailing/templates/mailing/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
main/: urls.py  views.py
main/templates/main/: base.html
main/templates/main/includes/: inc_menu.html
static/css/: bootstrap-grid.css  bootstrap-utilities.min.css.map  bootstrap.css  headers.css
static/js/: bootstrap.bundle.js  bootstrap.bundle.min.js.map  bootstrap.esm.js
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: password_reset.html  user_form.html  user_list.html
